converted all files to jsx (almost all, didn't let me change sidebar.js so whatever :shrug: and also fixed some tiny little bugs. organized folders for better readability and access

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,7 @@ body {
 }
 
 .app {
-	display: flex;
 	height: 100vh;
-
 	max-width: 1300px;
 	margin-left: auto;
 	margin-right: auto;
