--- a/src/Components/Screens/Feed.css
+++ b/src/Components/Screens/Feed.css
@@ -1,9 +1,10 @@
 .feed-container {
 	overflow: scroll;
+	width: 33%;
 }
 
 .feed {
-	flex: 0.4;
+	flex: 0.9;
 	border-right: 1px solid var(--twitter-background);
 	min-width: fit-content;
 }
@@ -20,16 +21,13 @@
 }
 
 .feed-header > h2 {
-  font-weight: 800;
-  font-size: 20px;
+	font-weight: 800;
+	font-size: 20px;
 }
 
 @media only screen and (max-width: 600px) {
-  
-  .feed-container{
-    margin: 0;
-    padding: 0;
-  }
-
+	.feed-container {
+		margin: 0;
+		padding: 0;
+	}
 }
-
